(Eli) SEO: added seo informaiton.

--- a/public/index.html
+++ b/public/index.html
@@ -4,27 +4,18 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="theme-color" content="#ECFDEC" />
+    <meta name="description" content="Steal My Art Back: Empowering artists to protect their work through DMCA takedown requests. A comprehensive resource for copyright protection and intellectual property rights in the digital age." />
+    <meta name="keywords" content="DMCA, Copyright Protection, Intellectual Property, Artists Rights, Art Theft, Content Protection, Digital Rights Management" />
+    <meta property="og:title" content="Steal My Art Back: Protect Your Artwork" />
+    <meta property="og:description" content="Assisting artists in the fight against unauthorized use and distribution of their work. Learn how to effectively use DMCA takedown requests." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://www.stealmyartback.com" />
+    <meta property="og:image" content="%PUBLIC_URL%/og-image.jpg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <title>Steal My Art Back - Protect Your Creative Work</title>
+    <!-- Additional tags for analytics and web fonts can be added here -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
